objects/Evaluation_Question_Bank__c.object
<CustomObject><fields>
        <fullName>ACF_Evaluation_Question__c</fullName>
        <inlineHelpText>Question as it will display on evaluation forms</inlineHelpText>
        <label>Evaluation Question</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Instructions__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>Evaluation_Question_Bank__c</referenceTo>
        <relationshipLabel>Evaluation Question Bank</relationshipLabel>
        <relationshipName>Evaluation_Question_Bank</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Question_Category__c</fullName>
        <label>Question Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Service Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Service Score</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Question_owner__c</fullName>
        <label>Question Owner</label>
        <picklist>
            <picklistValues>
                <fullName>BEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCD EL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Reverse_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Scale</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Scale_High_Annotation__c</fullName>
        <label>Scale High Annotation</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Scale_Low_Annotation__c</fullName>
        <label>Scale Low Annotation</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Scale_Points__c</fullName>
        <label>Scale Points</label>
        <picklist>
            <picklistValues>
                <fullName>1__2__3__4__5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1__2__3__4__5__6__7__8__9__10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Scale_Points_migrated__c</fullName>
        <label>Scale Points (migrated)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Scale_Type__c</fullName>
        <inlineHelpText>historical</inlineHelpText>
        <label>Scale Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ascending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Descending</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Scale__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Scale_Low_Annotation__c)), 
ACF_Scale_Low_Annotation__c + "__" + TEXT(ACF_Scale_Points__c) + "__" + ACF_Scale_High_Annotation__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the scale will be displayed on the evaluation form</inlineHelpText>
        <label>Scale (low to high)</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Hold the evaluation questions related to answers stored in Salesforce</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Evaluation Question Bank</label><nameField>
        <label>Evaluation Question Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Evaluation Question Bank</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACF_Evaluation_Question__c</columns>
        <columns>ACF_Scale__c</columns>
        <columns>ACF_Question_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>